# gc_malloc-v2

./: CMakeLists.txt  README.md  demo.c
doc/: .$gc_malloc.drawio.bkp  gc_malloc.drawio
include/gc_malloc/CentralHeap/: CentralHeap.hpp  FreeChunkCache.hpp  FreeChunkListCache.hpp
include/gc_malloc/TheadHeap/: Bitmap.hpp  MemSubPool.hpp
include/gc_malloc/ThreadHeap/: Bitmap.hpp  BlockHeader.hpp  ManagedList.hpp  MemSubPool.hpp  MemSubPoolList.hpp  SizeClassConfig.hpp  SizeClassPoolManager.hpp  ThreadHeap.hpp
src/: CMakeLists.txt
src/gc_malloc/CentralHeap/: CentralHeap.cpp  FreeChunkListCache.cpp
src/gc_malloc/TheadHeap/: Bitmap.cpp
src/gc_malloc/ThreadHeap/: Bitmap.cpp  BlockHeader.cpp  ManagedList.cpp  MemSubPool.cpp  MemSubPoolList.cpp  SizeClassConfig.cpp  SizeClassPoolManager.cpp  ThreadHeap.cpp
tests/: AlignedChunkAllocatorByMmap_test.cpp  Bitmap_test.cpp  CMakeLists.txt  CentralHeap_test.cpp  FreeChunkListCache_test.cpp  ManagedList_test.cpp  MemSubPoolList_test.cpp  MemSubPool_test.cpp  SizeClassConfig_test.cpp  SizeClassPoolManager_test.cpp  ThreadHeap_test.cpp
